Refactor director to have option to include or exclude movies